# altc-gui

./: Cargo.toml  LICENSE  README.md  index.html  shell.nix  tailwind.config.js
.github/workflows/: static.yml
src/: app.rs  tailwind.css
src/components/: ask.rs  live_version_select_options.rs  mod.rs
src/components/filelist/: file.rs  mod.rs
