[package]
name = "altc-gui"
version = "0.1.0"
edition = "2021"
description = "Convert Live 10, 11, and 12 themes"
readme = "README.md"
repository = "https://github.com/amydevs/altc-gui"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
altc = { tag = "0.2.11", git = "https://github.com/amydevs/AbletonLiveThemeConverter.git" }
web-sys = { version = "0.3", features = ["DataTransfer", "HtmlSelectElement", "HtmlAnchorElement"] }
gloo = "0.12"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
quick-xml = "0.36"
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"